Added telegram icon

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                 </li>
             
                 <li class="list-inline-item">
-                  <a href="https://keybase.io/edwardawebb" data-toggle="tooltip" title="Keybase" data-offset="0 10">
+                  <a href="https://t.me/mozzat" data-toggle="tooltip" title="Telegram" data-offset="0 10">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa fa-key fa-stack-1x fa-inverse"></i>
+                      <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
                     </span>
                   </a>
                 </li>
