--- a/projects/creations/nebula/index.html
+++ b/projects/creations/nebula/index.html
@@ -107,7 +107,32 @@
 <section class="resume-section p-3 p-lg-5 d-flex d-column">
   <div class="my-auto">
     <h2 class="mb-0"><span class="text-primary">Nebula</span></h2>
-    <p>Provides required dependencies and additional utilities to simplify and codify the process of building, testing and delivering Atlassian plugins all the way to the live marketplace.<ul> <li>Executes integration/AUT level tests against all stated compatible versions for the product</li><li>Uploads generated artifact to Atlassian marketplace</li><li>Provides corresponding metadata indicating version, release notes, and compatibility</li></ul></p>
+    
+
+<p>I helped found the Mobile Development Team at Indus Valley Partners by working on several applications including IVP Nebula. IVP Nebula, enables alternative asset managers to access Key Performance Indicators, Portfolio Insights, Enterprise Data.</p>
+
+<p><img src="/static/img/nebula.png" alt="Nebula" /></p>
+
+<h2 id="key-features">Key Features</h2>
+
+<p>I was involved from the ideation stage and contributed to key features:</p>
+
+<ol>
+<li><strong>Power Optimization</strong> Developed query processing and caching strategies for optimizing power consumption.</li>
+<li><strong>Security</strong> Developed a library to provide easy access to File Encryption, Network Communication based on Crytographic Hashing/Encryption algorithms provided by the Common Crypto Framework.</li>
+<li><strong>High-Performance Calculations</strong> Developed a library to provide high-performance on-device arithmetic calculations using SIMD instructions provided by the Accelerate Framework.</li>
+<li><strong>Multi-Source Integration</strong> Flexible integration with IVP Polaris, Stratus (Enterprise/Cloud Warehouse solutions) and in house data storage systems, excel files and pulling in that data onto mobile device.</li>
+<li><strong>Dashboard Store</strong> Added a &ldquo;store&rdquo; where custom dashboards/analytics can be created and shared from a Web Dashboard which can then be interacted with natively on Mobile.</li>
+<li><strong>Exporting</strong> Exporting to PDF, Excel with sharing via Email or Integrated Messaging.</li>
+</ol>
+
+<h2 id="users">Users</h2>
+
+<ol>
+<li>Portfolio managers/Traders to access P&amp;L reports, Market data and Trading.</li>
+<li>IR/Marketing team access to Investor/Performance data.</li>
+<li>Chief compliance officers access to real time compliance violations/alerts.</li>
+</ol>
 
     
     <ul class="tags">
