--- a/projects/index.html
+++ b/projects/index.html
@@ -139,7 +139,7 @@
     
   </div>
   <div class="resume-date">
-    <p>Provides required dependencies and additional utilities to simplify and codify the process of building, testing and delivering Atlassian plugins all the way to the live marketplace.<ul> <li>Executes integration/AUT level tests against all stated compatible versions for the product</li><li>Uploads generated artifact to Atlassian marketplace</li><li>Provides corresponding metadata indicating version, release notes, and compatibility</li></ul><p>
+    <p>I helped found the Mobile Development Team at Indus Valley Partners by working on several applications including IVP Nebula. IVP Nebula, enables alternative asset managers to access Key Performance Indicators, Portfolio Insights, Enterprise Data.<p>
     <p class><a href="https://mogarg.github.io/projects/creations/nebula/">Read more..</a></p>
   </div>
 </div>
