Missing Nebula Image added

--- a/projects/creations/nebula/index.html
+++ b/projects/creations/nebula/index.html
@@ -111,19 +111,19 @@
 
 <p>I helped found the Mobile Development Team at Indus Valley Partners by working on several applications including IVP Nebula. IVP Nebula, enables alternative asset managers to access Key Performance Indicators, Portfolio Insights, Enterprise Data.</p>
 
-<p><img src="/static/img/nebula.png" alt="Nebula" /></p>
+<p><img src="/img/nebula.png" alt="Nebula" /></p>
 
 <h2 id="key-features">Key Features</h2>
 
 <p>I was involved from the ideation stage and contributed to key features:</p>
 
 <ol>
-<li><strong>Power Optimization</strong> Developed query processing and caching strategies for optimizing power consumption.</li>
-<li><strong>Security</strong> Developed a library to provide easy access to File Encryption, Network Communication based on Crytographic Hashing/Encryption algorithms provided by the Common Crypto Framework.</li>
-<li><strong>High-Performance Calculations</strong> Developed a library to provide high-performance on-device arithmetic calculations using SIMD instructions provided by the Accelerate Framework.</li>
-<li><strong>Multi-Source Integration</strong> Flexible integration with IVP Polaris, Stratus (Enterprise/Cloud Warehouse solutions) and in house data storage systems, excel files and pulling in that data onto mobile device.</li>
-<li><strong>Dashboard Store</strong> Added a &ldquo;store&rdquo; where custom dashboards/analytics can be created and shared from a Web Dashboard which can then be interacted with natively on Mobile.</li>
-<li><strong>Exporting</strong> Exporting to PDF, Excel with sharing via Email or Integrated Messaging.</li>
+<li><strong>Power Optimization:</strong> Developed query processing and caching strategies for optimizing power consumption.</li>
+<li><strong>Security:</strong> Developed a library to provide easy access to File Encryption, Network Communication based on Crytographic Hashing/Encryption algorithms provided by the Common Crypto Framework.</li>
+<li><strong>High-Performance Calculations:</strong> Developed a library to provide high-performance on-device arithmetic calculations using SIMD instructions provided by the Accelerate Framework.</li>
+<li><strong>Multi-Source Integration:</strong> Flexible integration with IVP Polaris, Stratus (Enterprise/Cloud Warehouse solutions) and in house data storage systems, excel files and pulling in that data onto mobile device.</li>
+<li><strong>Dashboard Store:</strong> Added a &ldquo;store&rdquo; where custom dashboards/analytics can be created and shared from a Web Dashboard which can then be interacted with natively on Mobile.</li>
+<li><strong>Sharing:</strong> Exporting to PDF, Excel with sharing via Email or Integrated Messaging.</li>
 </ol>
 
 <h2 id="users">Users</h2>
