Added thesis link on the introduction page

--- a/projects/creations/index.html
+++ b/projects/creations/index.html
@@ -100,7 +100,7 @@
 <section class="resume-section p-3 p-lg-5 d-flex flex-column">
   <div class="my-auto" id="projects-content">
     <h1 id="projects">Projects</h1>
-    <p><p> A collection of projects authored by Mohit </p> 
+    <p><p>I have worked on projects ranging from Robotics, iOS Development to Data Engineering and Distributed Systems. Here are some of</p>
 </p>
     
         
