--- a/projects/creations/nebula/index.html
+++ b/projects/creations/nebula/index.html
@@ -111,8 +111,6 @@
 
 <p>I helped found the Mobile Development Team at Indus Valley Partners by working on several applications including IVP Nebula. IVP Nebula, enables alternative asset managers to access Key Performance Indicators, Portfolio Insights, Enterprise Data.</p>
 
-<p><img src="/img/nebula.png" alt="Nebula" /></p>
-
 <h2 id="key-features">Key Features</h2>
 
 <p>I was involved from the ideation stage and contributed to key features:</p>
@@ -126,12 +124,14 @@
 <li><strong>Sharing:</strong> Exporting to PDF, Excel with sharing via Email or Integrated Messaging.</li>
 </ol>
 
+<p><img src="/img/nebula.png" alt="Nebula" /></p>
+
 <h2 id="users">Users</h2>
 
 <ol>
-<li>Portfolio managers/Traders to access P&amp;L reports, Market data and Trading.</li>
-<li>IR/Marketing team access to Investor/Performance data.</li>
-<li>Chief compliance officers access to real time compliance violations/alerts.</li>
+<li>By Portfolio managers/Traders to access P&amp;L reports, Market data and Trading.</li>
+<li>By IR/Marketing team to Investor/Performance data.</li>
+<li>By Chief compliance officers access to real time compliance violations/alerts.</li>
 </ol>
 
     
