--- a/projects/creations/elpis/index.html
+++ b/projects/creations/elpis/index.html
@@ -109,6 +109,10 @@
     <h2 class="mb-0"><span class="text-primary">Elpis</span></h2>
     
 
+<h2 id="thesis">Thesis</h2>
+
+<p><a href="http://hdl.handle.net/10919/85049">Elpis</a></p>
+
 <h2 id="motivation">Motivation</h2>
 
 <p>While internet services are designed and deployed with an assumption of perimeter less security at the application layer, most production distributed systems today are designed assuming a classical Crash Fault Tolerant (CFT) model. In realistic deployment scenarios, keeping track of all bridged networks such as smartphones, network printers, etc. is almost impossible. Hence, designing distributed systems without considering the possibility of an active adversary makes the system vulnerable from its core. While there exists extensive research on Byzantine Fault Tolerant (BFT) systems, overheads associated with such solutions preclude widespread adoption.</p>
@@ -120,20 +124,6 @@
 <h2 id="solution">Solution</h2>
 
 <p>To solve the problem of liveness in M2Paxos, I designed a leader-election algorithm which provides liveness while providing weak-consistency for object ownership. The weak consistency assumption implies that even though all nodes don&rsquo;t agree on a single leader for objects accessed by conflicting commands at all times, they can have these commands decided by forwarding their request to a node that they have elected as the leader. Ultimately, if there are no new conflicting commands proposed all nodes agree on a unique leader. The ownership acquisition for commands don&rsquo;t conflict can still execute in parallel. To make this Byzantine Fault-Tolerant I plan to use Verifiable Random Functions where nodes generate random tags which can be verified by other nodes. This algorithm can be leveraged to design a multi-leader Byzantine Fault Tolerant consensus algorithm which provides higher performance than XPaxos and which does not incur extra deployment costs.</p>
-
-<h2 id="status">Status</h2>
-
-<ul class="task-list">
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Implement M2Paxos in JGroups</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Test and Benchmark M2Paxos</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Design leader election</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Byzantine leader election</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Byzantine Agreement</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Implementation</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Test and Benchmark Elpis</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Writeup</label></li>
-<li><label><input type="checkbox" checked disabled class="task-list-item"> Submit to a conference</label></li>
-</ul>
 
     
     <ul class="tags">
