--- a/projects/creations/elpis/index.html
+++ b/projects/creations/elpis/index.html
@@ -111,7 +111,7 @@
 
 <h2 id="thesis">Thesis</h2>
 
-<p><a href="http://hdl.handle.net/10919/85049">Elpis</a></p>
+<p>My thesis can be found <a href="http://hdl.handle.net/10919/85049">here</a>.</p>
 
 <h2 id="motivation">Motivation</h2>
 
@@ -153,13 +153,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   
   <script src="/js/resume.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=XX-123446-01"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111449365-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'XX-123446-01');
+    gtag('config', 'UA-111449365-1');
   </script>
   
 
